force-app/main/default/objects/UOM_Quantity_Mapping__mdt/UOM_Quantity_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>UOM Quantity Mapping</label>
    <pluralLabel>UOM Quantity Mappings</pluralLabel>
</CustomObject>