force-app/main/default/objects/UOM_Quantity_Mapping__mdt/fields/Maximum_quantity_message__c.field-meta.xml
<CustomField>
    <fullName>Maximum_quantity_message__c</fullName>
    <label>Maximum quantity message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>