force-app/main/default/objects/UOM_Quantity_Mapping__mdt/fields/Minimum_quantity_message__c.field-meta.xml
<CustomField>
    <fullName>Minimum_quantity_message__c</fullName>
    <label>Minimum quantity message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>